# loci

./: .gitignore  .mcp.json  CLAUDE.md  CONTRIBUTING.md  PLAN.md  README.md  install.ps1  install.sh  pyproject.toml
.github/workflows/: ci.yml  release.yml
context/: Wiggin's note on second brain.txt  qmd.md  wiki_gen_skill.md
context/tolaria/adr/: 0071-external-vault-refresh-and-clean-tab-reopen.md
docs/: README.md  agent.md  architecture.md  frontend.md  getting-started.md  graph-ui.md  graph.md  model-config.md  research.md  session-lifecycle.md  sources.md
src/loci/: __init__.py  cli.py  config.py  draft.py  layout.py  logging_config.py  tui.py  verify.py
src/loci/agent/: __init__.py  feedback.py  interpreter.py  memo.py  refine.py
src/loci/api/: __init__.py  app.py  dependencies.py  publishers.py  pubsub.py  websocket.py
src/loci/api/routes/: __init__.py  anchors.py  aspects.py  context.py  draft.py  edges.py  feedback.py  graph_ui.py  graph_view.py  jobs.py  nodes.py  projects.py  proposals.py  responses.py  retrieve.py  revisions.py  sources.py  workspaces.py
src/loci/api/static/graph_ui/: index.html
src/loci/capture/: __init__.py  aspect_suggest.py  folder_suggest.py  ingest.py  link_parser.py
src/loci/citations/: __init__.py  tracker.py
src/loci/db/: __init__.py  connection.py  migrate.py  schema.py  schema.sql
src/loci/db/migrations/: 0001_initial.sql  0002_chunks.sql  0002_project_sources.sql  0003_agent_synthesis.sql  0003_autoresearch_job.sql  0004_information_workspaces.sql  0004_job_step_log.sql  0005_relevance_interpretations.sql  0005_revisions_and_prefs.sql  0006_jobs_kinds.sql  0007_schema_simplification.sql  0008_reflect_retrieve_trigger.sql  __init__.py
src/loci/embed/: __init__.py  local.py
src/loci/graph/: __init__.py  aspects.py  concept_edges.py  conceptnet_types.py  edges.py  export.py  models.py  nodes.py  projects.py  revisions.py  sources.py  workspaces.py
src/loci/ingest/: __init__.py  backfill.py  chunker.py  chunks.py  content_hash.py  dependencies.py  extractors.py  pipeline.py  walker.py
src/loci/jobs/: __init__.py  absorb.py  audits.py  autoresearch.py  classify_aspects.py  communities.py  contradiction.py  embed_missing.py  kickoff.py  log_usage.py  parse_links.py  preference_pairs.py  proposals.py  queue.py  reflect.py  relevance.py  research_paths.py  sweep_orphans.py  worker.py
src/loci/llm/: __init__.py  agent.py
src/loci/mcp/: __init__.py  resolve.py  server.py
src/loci/research/: __init__.py  agent.py  papers.py  sandbox.py
src/loci/retrieve/: __init__.py  affinity.py  concept_expand.py  effects.py  hyde.py  lex.py  narrative.py  pipeline.py  ppr.py  vec.py
src/loci/ui/: __init__.py  cli.py  tui.py
src/loci/usecases/: __init__.py  draft.py  retrieve.py
tests/: conftest.py  test_agent.py  test_api.py  test_chunker.py  test_chunks.py  test_citations.py  test_draft.py  test_feedback.py  test_frontend_endpoints.py  test_graph.py  test_ingest.py  test_jobs.py  test_kickoff.py  test_retrieve.py  test_retrieve_narrative.py  test_schema.py  test_sources.py  test_verify.py
website/: index.html
